# trlx

./: .deepspeed_env  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  0001-feat-configs-add-tags-config-option.patch  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  converter_llama_nemo.py  converter_llama_nemo_7b.py  converter_llama_nemo_7b_fix.py  dictionary.txt  dist_gen.py  ds_config.json  events.out.tfevents.1674146906.compute-permanent-node-383.44140.0  events.out.tfevents.1674146945.compute-permanent-node-383.44619.0  example_adaptation.py  ignore  logs.txt  nlp_example.py  plain_gptj.py  ppo_hf_trainer.py  pyproject.toml  requirements.txt  run.sh  run_sent.sh  scratch.py  setup.cfg  setup.py  setup.sh  simple_hydra.py  single_gpu.txt  test.py  test_trl.py  test_trl.txt  test_trl_accelerate.py  test_trl_accelerate.txt  (+14 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  release.yml
.github/workflows/: build.yml  code_quality.yml  docs.yml  publish_to_pip.yml
accelerate_configs/: accelerate_config.yaml  config_local.yaml  deepspeed_config.yaml  example_config.yaml  fsdp_config.yaml  fsdp_config_local.yaml  new_transformer_config_single_gpu.yaml  predict_fsdp.yaml
configs/: a2c_config.yml  a2c_gptj.yml  config_local.yaml  deepspeed_config.yaml  default_config.yml  example_config.yaml  example_config_1.yaml  fsdp_config.yaml  fsdp_config_1.yaml  fsdp_config_local.yaml  gptj_config.yml  ilql_config.yml  ilql_gptj.yml  ilql_randomwalks.yml  ilql_sentiment_t5.yml  ilql_summarize_t5.yml  isd_config.yml  nemo_ilql_config.yml  nemo_sft_config.yml  new_transformer_config.yaml  ppo_config.yml  ppo_config_t5.yml  ppo_gptj.yml  ppo_petals_config.yml  ppo_randomwalks.yml  ppo_softprompt_config.yml  sentiment_config.yml  sft_config.yml  test_config.yml
configs/accelerate/: ddp.yaml  zero2-bf16.yaml  zero2-fp16.yaml  zero3.yaml
configs/deepspeed/: zero2-fp16.yaml
configs/deepspeed_configs/: default_configs.yml
configs/diffusion/: isd_config.yml
configs/ds_configs/: default_ds.yml
configs/nemo_configs/: megatron_1.3b.yaml  megatron_20b.yaml  megatron_20b.yml  megatron_260b.yaml  megatron_2b.yaml  megatron_30b_llama.yaml  megatron_40b_deep.yaml  megatron_40b_wide.yaml  megatron_65b.yaml  megatron_65b.yml  megatron_7b_llama.yaml  sft_megatron_20b.yaml
configs/ray_tune_configs/: ppo_config.yml
configs/sweep_configs/: ppo_config.yml
configs/sweeps/: ilql_sweep.yml  ppo_sweep.yml
docker/docs/: Dockerfile
docs/: Makefile  README.md  build.sh  conf.py  configs.rst  examples.md  faq.md  glossary.md  index.rst  pipeline.rst  requirements.txt  trainer.rst
docs/_static/: style.css
docs/source/: api.rst  conf.py  configs.rst  data.rst  examples.rst  index.rst  installation.rst  models.rst  orchestrator.rst  pipeline.rst  pipelines.rst  trainer.rst  trainers.rst
examples/: a2c_sentiments.py  accelerate_train.py  architext.py  dpo_ultrafeedback.py  ds_config_trlx_neoj.json  ds_config_trlx_t5.json  encoder_decoder.py  ilql_architext.py  ilql_hh.py  ilql_prompt_eng.py  ilql_randomwalks.py  ilql_sentiments.py  ilql_sentiments_t5.py  ilql_simulacra.py  ilql_th_sentiments.py  mixed_ppo_sft_sentiments.py  model_generated_evals.py  mrt_translation_t5.py  nemo_ilql_inference.py  nemo_ilql_sentiments.py  nemo_ppo_inference.py  nemo_ppo_math.py  nemo_ppo_sentiments.py  nemo_sft_sentiments.py  nemo_vs_ds_chat.py  offline.py  offline_train.py  ppo_architext.py  ppo_banana.py  ppo_config_cnn_daily.yml  ppo_config_sent_t5.yml  ppo_config_summ_neo.yml  ppo_config_summ_t5.yml  ppo_dense_sentiments.py  ppo_lora_sentiments.py  ppo_lora_sentiments_inference.py  ppo_petals_sentiments.py  ppo_prompt_eng.py  ppo_randomwalks.py  ppo_redemption.py  (+34 more)
examples/alpaca/: README.md  sft_alpaca.py  sft_gpt4all.py  sft_mix.py
examples/configs/: ppo_config_cnn_daily.yml
examples/diffusion/: basic_model_test.py
examples/experience_demo/: encoder_decoder.py  encoder_decoder_simple.py  encoder_decoder_text.py  encoder_decoder_token.py  increment.py  utils.py
examples/hh/: README.md  dpo_hh.py  ilql_hh.py  nemo_ilql_hh.py  nemo_ppo_hh.py  nemo_ppo_steamshp.py  ppo_hh.py  sft_hh.py  test_shp.py  to_triton.py  triton_config.pbtxt
examples/llama_nemo/: README.md  convert_llama_to_nemo.py  dist_train.sh  emptp_nemo.py  megatron_7b_llama.yaml  megatron_llama_cfg.yaml  nemo_llama2_ppo_sentiments.py  nemo_ppo_sentiments.py  ori_cvt.py  ori_duy.yaml
examples/notebooks/: trlx_sentiments.ipynb  trlx_simulacra.ipynb
examples/poems/: poetry_big_val_qa.csv
examples/randomwalks/: README.md  __init__.py  ilql_randomwalks.py  ppo_randomwalks.py  randomwalks.py  rft_randomwalks.py
examples/ray_tune_examples/: ppo_sentiments.py
examples/rlhf_vicuna/: reward_model.py  rlhf_vicuna.py
examples/stable_vicuna/: README.md  (+4 more)
framework/: configs.py
ppo_configs/: default_config.yaml
scripts/: accelerate_train_example.sh  benchmark.sh  reference.py  slurm_train.sh  sweep-cw.sh
soft_optim/: fine_tune.py  game_generator.py
tests/: temp.py  test_configs.py  test_minibatch.py  test_modeling.py  test_models.py  test_peft.py  test_pipelines.py  test_ppo.py  test_pretrained_model_wrapper.py  test_trainers.py  test_utils.py
trl/: gptj.py  gptneo.py  ppo.py  ppo_deepspeed.py
trlx/: __init__.py  accelerate.py  default_configs.py  fine_tune_game_format.py  reference.py  sweep.py  tic_tac_toe_data.py  trlx.py
unittests/: test_ppo.py
wandb/: latest-run
(+438 files in other folders)
