[metadata]
name = trlx
author = Alex Havrilla
version = 0.7.0
url = https://github.com/CarperAI/trlx
description = A repo for distributed training of language models with Reinforcement Learning via Human Feedback (RLHF)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    accelerate>=0.17.1
    attrs>=22.1.0
    cattrs>=22.2.0
    datasets
    deepspeed>=0.8.1
    einops>=0.4.1
    numpy>=1.23.2
    torchtyping
    transformers>=4.27.1
    tqdm
    rich
    wandb>=0.13.5
    ray>=2.4.0
    tabulate>=0.9.0
    networkx
    tritonclient

[options.extras_require]
bnb =
    bitsandbytes
    scipy  # fix(bnb): Remove when `bitsandbytes` adds this dependency
dev =
    black
    hypothesis
    isort
    flake8
    pre-commit
    pytest
    pytest-cov

[options.packages.find]
exclude =
    docs*
    tests*

[flake8]
max-complexity = 10
max-line-length = 127
# flake8 error codes: https://flake8.pycqa.org/en/latest/user/error-codes.html
# pycodestyle codes: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E203 # whitespace before ‘,’, ‘;’, or ‘:’
# E741 # do not use variables named ‘l’, ‘O’, or ‘I’
# F401 # module imported but unused
# F821 # undefined name name
# W503 # line break before binary operator
# W605 # invalid escape sequence ‘x’
ignore =
    E203
    E741
    F821
    W503
    W605
per-file-ignores = __init__.py:F401,loading.py:F401
exclude =
    .git
    __pycache__
    docs/source/conf.py
    build
    dist
